# turkish_amr_colobration

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  enums.py  main.py  schemas.py
backend/app/models/: __init__.py  adjudication.py  annotation.py  assignment.py  audit.py  export_job.py  failed_submission.py  membership.py  project.py  review.py  sentence.py  user.py  user_profile.py
backend/app/routers/: __init__.py  audit.py  auth.py  export.py  health.py  projects.py  sentences.py
backend/app/services/: assignment_engine.py  audit.py  export.py  export_worker.py  job_queue.py  security.py  validation.py  workflow.py
backend/tests/: test_export_service.py  test_sentences_validation.py  test_validation.py
docs/: amr_platform_plan.md
frontend/: eslint.config.js  package-lock.json  package.json  prettier.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  exports.ts  projects.ts  queryKeys.ts  sentences.ts
frontend/src/auth/: AuthProvider.tsx  tokenStorage.ts
frontend/src/i18n/: config.ts
frontend/src/pages/: AdminPage.tsx  AnnotatorPage.tsx  CuratorPage.tsx  DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PendingApprovalPage.tsx  RegisterPage.tsx  ReviewerPage.tsx
frontend/src/routes/: router.tsx
frontend/src/theme/: index.ts
frontend/src/types/: adjudication.ts  annotation.ts  auth.ts  export.ts  project.ts  review.ts  sentence.ts  validation.ts
frontend/src/utils/: penman.ts  safeStorage.ts
(+23 files in other folders)
